[gd_scene load_steps=7 format=3 uid="uid://c10uc64q74qpt"]

[ext_resource type="Texture2D" uid="uid://bjewftxed00sc" path="res://Assets/menubg.png" id="1_6soo1"]
[ext_resource type="Texture2D" uid="uid://c1s02talja2to" path="res://Assets/dialogbg.png" id="2_nfhyr"]
[ext_resource type="Script" path="res://Scripts/next_slide.gd" id="3_1ddme"]
[ext_resource type="Script" path="res://Scripts/Button2.gd" id="4_3fnr3"]
[ext_resource type="Script" path="res://Scripts/Button3.gd" id="5_hbwm4"]

[sub_resource type="LabelSettings" id="LabelSettings_wf4sb"]
font_size = 30
font_color = Color(0, 0, 0, 1)
shadow_color = Color(0.27451, 0.341176, 0.407843, 0)

[node name="Start" type="Node2D"]

[node name="Menubg" type="Sprite2D" parent="."]
position = Vector2(574, 331)
scale = Vector2(0.600414, 0.654146)
texture = ExtResource("1_6soo1")

[node name="Dialogbg" type="Sprite2D" parent="."]
position = Vector2(573.5, 412)
scale = Vector2(2.26367, 1)
texture = ExtResource("2_nfhyr")

[node name="DialogStart" type="Label" parent="."]
offset_left = 182.0
offset_top = 542.0
offset_right = 665.0
offset_bottom = 686.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 31
text = "Что то я задержался, наверно пойду домой..."
label_settings = SubResource("LabelSettings_wf4sb")

[node name="Button" type="Button" parent="."]
offset_left = -11.0
offset_top = 536.0
offset_right = 1147.0
offset_bottom = 666.0
script = ExtResource("3_1ddme")

[node name="Button2" type="Button" parent="."]
visible = false
offset_left = 289.0
offset_top = 608.0
offset_right = 440.0
offset_bottom = 656.0
script = ExtResource("4_3fnr3")

[node name="Button3" type="Button" parent="."]
visible = false
offset_left = 589.0
offset_top = 607.0
offset_right = 730.0
offset_bottom = 654.0
script = ExtResource("5_hbwm4")
